--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.5",
+    "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -20,6 +22,8 @@
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-js-pagination": "^3.0.3",
+    "react-material-ui-carousel": "^3.1.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
